--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div><img src="tribute.png" alt="tribute page"><figcaption>Tribute page</figcaption></div>
       <div><img src="cal.png" alt="calculator"><figcaption>javascript calculator</figcaption></div>
       <div><img src="map.png" alt="map"><figcaption>Map of the globe</figcaption></div>
-      <div><img src="qoute.png" alt="quote" ><figcaption>quote-machine</figcaption></div>
+      <div><img src="qoute.png" alt="quote" ><figcaption>random-quote-machine</figcaption></div>
       <div> <img src="tac.png" alt="quote" ><figcaption>random-quote-machine</figcaption></div>
       <div><img src="wikipedia.png" alt="wiki"> <figcaption>wiki</figcaption></div>
       </div>
